--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -54,63 +54,60 @@
                                     <!--Price Updater Script-->
                                     <script>
                                         function parseExtraPrice(val) {
-                                          //Parse the value by first looking for the $
-                                          if (val.indexOf('$') != -1) {
-                                              let price = val.slice(val.indexOf('$') + 1, val.length);
-                                              return parseInt(price, 10);
-                                          }
-                                          return 0;
-                                      }
-
-                                      function changePrice() {
-                                          //Check IDs 'topping' 'extra' 'extra_rice'
-                                          {% if portion == 'dinner' %}
-                                          let base_price = {{selected_item['Base Price']}};
-
-                                          {% else %}
-
-                                          let base_price = {{selected_item['Lunch_Version']['Base Price']}};
-
-                                          {% endif %}
-
-                                          //Parse the values for just the numeric value extra price
-                                          let topping_elm, extra_elm, extra_rice_elm;
-
-                                          try{
-                                          topping_elm = document.getElementById('topping').value;
+                                            //Parse the value by first looking for the $
+                                            if (val.indexOf('$') != -1) {
+                                                let price = val.slice(val.indexOf('$') + 1, val.length);
+                                                return parseInt(price, 10);
                                             }
-                                        catch(err){
-                                            console.log(err);
-                                            topping_elm = '0';
+                                            return 0;
                                         }
 
-                                          try{
-                                          extra_elm = document.getElementById('extra').value;
+                                        function changePrice() {
+                                            //Check IDs 'topping' 'extra' 'extra_rice'
+                                            {% if portion == 'dinner' %}
+                                            let base_price = {{selected_item['Base Price']}};
+
+                                            {% else %}
+
+                                            let base_price = {{ selected_item['Lunch_Version']['Base Price']}};
+
+                                            {% endif %}
+                                            console.log('HI CHANGE PRICE');
+                                            //Parse the values for just the numeric value extra price
+                                            let topping_elm, extra_elm, extra_rice_elm;
+
+                                            try {
+                                                topping_elm = document.getElementById('topping').value;
+                                            } catch (err) {
+                                                console.log(err);
+                                                topping_elm = '0';
                                             }
-                                        catch(err){
-                                            console.log(err);
-                                            extra_elm = '0';
-                                        }
-                                          try{
-                                          extra_rice_elm = '$' + document.getElementById('extra_rice').value;
+
+                                            try {
+                                                extra_elm = document.getElementById('extra').value;
+                                            } catch (err) {
+                                                console.log(err);
+                                                extra_elm = '0';
                                             }
-                                        catch(err){
-                                            console.log(err);
-                                            extra_rice_elm = '0';
+                                            try {
+                                                extra_rice_elm = '$' + document.getElementById('extra_rice').value;
+                                            } catch (err) {
+                                                console.log(err);
+                                                extra_rice_elm = '0';
+                                            }
+
+                                            let topping = parseExtraPrice(topping_elm);
+                                            let extra = parseExtraPrice(extra_elm);
+                                            let extra_rice = parseExtraPrice(extra_rice_elm);
+
+                                            let cur_price = document.getElementById('the_price');
+
+                                            let additional = topping + extra + (extra_rice * 2);
+                                            //The cur_price updates to the new value, because the base_price is a float, we need to convert first
+                                            console.log(cur_price, additional, topping, extra, extra_rice);
+                                            cur_price.innerText = 'Price: ' + (parseInt(base_price, 10) + additional) + base_price.toString().slice(base_price.toString().length - 3, base_price.toString().length);
                                         }
-
-                                          let topping = parseExtraPrice(topping_elm);
-                                          let extra = parseExtraPrice(extra_elm);
-                                          let extra_rice = parseExtraPrice(extra_rice_elm);
-
-                                          let cur_price = document.getElementById('the_price');
-
-                                          let additional = topping + extra + (extra_rice * 2);
-                                          //The cur_price updates to the new value, because the base_price is a float, we need to convert first
-                                          console.log(cur_price, additional, topping, extra, extra_rice);
-                                          cur_price.innerText = 'Price: ' + (parseInt(base_price, 10) + additional) + base_price.toString().slice(base_price.toString().length - 3, base_price.toString().length);
-                                      }
-                          </script>
+                                    </script>
                                     <!--End price updater-->
 
                                     <!--customization starts here-->
